--- a/5/current_solutions.tex
+++ b/5/current_solutions.tex
@@ -14,7 +14,7 @@
 
 %: ----------------------- contents from here ------------------------
 \chapter{Istniejące systemy integrujące przetwarzanie mowy} % top level followed by section, subsection
-Po zaprezentowaniu wymagań rodzi się pytanie czy istnieją już systemy je spełniające. W wyniku wielogodzinnych poszukiwań ustalono iż, istnieje wiele alikacji integrujących ze sobą jeden lub dwa procesy przetwarzania mowy, nie udało się jednak znaleźć systemu integrującego trzy lub więcej takich procesów oraz pozwalającego na dowolne ich komponowanie w celu osiągnięcia zamierzonego celu biznesowego. Większość aplikacji wykorzystuje przetwarzanie mowy do konkretnego, założonego z góry celu i nie udostępnia żadnego interfejsu umożliwiającego ich ponowne użycie.  Poniżej przedstawione zostało trzy wybrane aplikacje integrujące różne rodzaje przetwarzania mowy.
+Po zaprezentowaniu wymagań rodzi się pytanie czy istnieją już systemy je spełniające. W wyniku wielogodzinnych poszukiwań ustalono, iż istnieje wiele aplikacji integrujących ze sobą jeden lub dwa procesy przetwarzania mowy, nie udało się jednak znaleźć systemu integrującego trzy lub więcej takich procesów oraz pozwalającego na dowolne ich komponowanie w celu osiągnięcia zamierzonego celu biznesowego. Większość aplikacji wykorzystuje przetwarzanie mowy do konkretnego, założonego z góry celu i nie udostępnia żadnego interfejsu umożliwiającego ich ponowne użycie.  Poniżej przedstawione zostało trzy wybrane aplikacje integrujące różne rodzaje przetwarzania mowy.
 
 \section {Google Goggles}
 
@@ -30,7 +30,7 @@ Aplikacja ta korzysta z usługi o tej samej nazwie dostarczanej przez korporacje
 
 \section {Oddcast Illustrated Characters}
 
-Oddcast Illustrated Characters\cite{oddcasts} jest to usługa integrująca w sobie funkcjonalność TTS i translację. Ciekawy jest sposób prezentacji wyników przetwarzania. Usługa udostępnia zestaw konfigurowalnych awatarów które można dodać do strony internetowej albo aplikacji mobilnej. Następnie przy użyciu odpowiedniego API lub wbudowanego interfejsu użytkownika można wpisać tekst, wybrać odpowiedni język źródłowy i docelowy, a wynik przetwarzania będzie wypowiedziany przez awatara.
+Oddcast Illustrated Characters\cite{oddcasts} jest to usługa integrująca w sobie funkcjonalność TTS i translację. Ciekawy jest sposób prezentacji wyników przetwarzania. Usługa udostępnia zestaw konfigurowalnych awatarów, które można dodać do strony internetowej albo aplikacji mobilnej. Następnie przy użyciu odpowiedniego API lub wbudowanego interfejsu użytkownika można wpisać tekst, wybrać odpowiedni język źródłowy i docelowy, a wynik przetwarzania będzie wypowiedziany przez awatara.
 
 \begin{figure}[!h]
 	\centering
