--- a/6/projekt_i_implementacja.tex
+++ b/6/projekt_i_implementacja.tex
@@ -288,7 +288,7 @@ Dzięki bogatej bazie komponentów dostępnych w Apache Camel, implementacja kon
 Aby użyć niektórych rodzajów punktów końcowych, wymagany nakład pracy jest trochę większy, lecz nadal stosunkowo mały. Chcąc udostępnić system za pomocą technologii Web services należało stworzyć również opis usługi, jednak sprowadza się to do implementacji prostego interfejsu z dodatkowymi adnotacjami.  Fragment kodu \ref{lst:rest_service} przedstawia definicje usługi zgodnej z technologią REST web services, która zastała użyta do konfiguracji punktu końcowego cxfrs. Metody w poniższej klasie nie są wywoływane, służą one tylko do konfiguracji punktu końcowego. Za całe przetwarzanie odpowiedzialna jest reszta ścieżki Apache Camel.
 
 
-\lstset{language=Java, tabsize=4, caption=Definicja REST-owego punktu końcowego.,label=lst:rest_service}
+\lstset{language=Java, tabsize=4, caption=Definicja punktu końcowego w technologii REST.,label=lst:rest_service}
 
 
 %Trzeba to przejrzeć czy to działa zanim to sie pokaże wiekszej liczbie osób.
