--- a/8/przebieg_integracji.tex
+++ b/8/przebieg_integracji.tex
@@ -17,7 +17,7 @@
 % ----------------------- contents from here ------------------------
 
 Rozdział ten przedstawia konkretną konfigurację systemu SpeechProcessingPlatform, która została użyta do przeprowadzenia testów opisanych w kolejnym rozdziale, a także opisuje krok po kroku proces integracji usług w systemie SpeechProcessingPlatform na przykładzie usługi IVONA SaaS.
-\section{Przykłądowa konfiguracja}
+\section{Przykładowa konfiguracja}
 
 \begin{figure}[!h]
 	\centering
