--- a/9_backmatter/references.bib
+++ b/9_backmatter/references.bib
@@ -164,3 +164,9 @@
 	howpublished = "\url{http://www.pediaphon.org}",
 	year = 2011
 }
+
+@misc{w3cweb,
+	title = "strona domowa W3C",
+	howpublished = "\url{http://www.w3.org/}",
+	year = 2012
+}
