Added english title

--- a/thesis.tex
+++ b/thesis.tex
@@ -98,6 +98,8 @@ Katedra Informatyki
 
 \vskip 10pt
 {\bf \Large Integracja systemów przetwarzania mowy w środowisku zgodnym z paradygmatem SOA}
+\vskip 20pt
+{\bf \Large Integration of speech processing systems in SOA-compliant environments}
 \end{center}
 
 \vskip 60pt
