--- a/1_introduction/introduction.tex
+++ b/1_introduction/introduction.tex
@@ -58,6 +58,14 @@ W zakres pracy wchodzą technologie związane zarówno z architekturą SOA jak i
 	\item dostępnej dokumentacji i pomocy technicznej.
 \end{itemize}
 Efekt i wnioski wynikające z przeprowadzonych badań przedstawione są w kolejnych rozdziałach.
+\section{Struktura pracy}
+Praca podzielona jest na rozdziały, zaczyna się od wprowadzenia i kończy podsumowaniem. Rozdział drugi przedstawia analizę problemu integracji systemów przetwarzania mowy oraz technik integracyjnych systemów rozproszonych. W rozdziale trzecim opisane są istniejące system integrujące procesy przetwarzania mowy, ich wady oraz zalety. Rozdział czwarty opisuje projekt oraz implementację systemu SpeechProcessingPlatform czyli przykładowej platformy integrującej systemy przetwarzania mowy. W rozdziale piątym opisane są technologie wykorzystane przy tworzeniu systemu. Rozdział szósty pokazuje przebieg integracji na przykładzie pojedynczej usługi jaką jest IVONA SaaS. W rozdziale siódmym zaprezentowana jest weryfikacja rozwiązania, zarówno funkcjonalna jak i wydajnościowa. Ostatni rozdział podsumowuje całą pracę oraz przedstawia uzyskane wnioski. \\
+Autorzy poszczególnych rozdziałów:
+\begin{itemize}
+	\item Rafał Fronczyk - Istniejące systemy przetwarzania mowy(3), Przebieg integracji(6), Podsumowanie(8)
+	\item Konrad Dziedzic - Wstęp(1), Wykorzystane technologie(5), Weryfikacja rozwiązania(7)
+	\item rozdziały pisane razem - Analiza problemu integracji systemów przetwarzania mowy(2), Projekt i implementacja systemu SpeechProcessingPlatform(4)
+\end{itemize}
 
 
 
